--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 	<div id="pdf-buttons">
 		<button id="pdf-prev" class="btn btn-primary">Предыдущая стр.</button>
 		<button id="pdf-next" class="btn btn-primary">Следующая стр.</button>
-		<div id="page-count-container">Страница 
-			<div id="pdf-current-page"></div> 
-			из
-			<div id="pdf-total-pages"></div>
+		<div id="page-count-container">
+			Страница <div id="pdf-current-page"></div> из <div id="pdf-total-pages"></div>
 		</div>
 	</div>
       <div class="result">
